# bootcamp_jd_aula_17

./: README.md  desafio.db  desafio.py  exemplo.py  meubanco.db  pyproject.toml
